# festival-tickets

./: Cargo.toml  README.md  build.rs  docker-compose.yml  justfile  seed_db.sql  template.env
actix/: Cargo.toml  README.md  justfile
actix/src/: main.rs
actix/src/api/: error.rs  mod.rs  types.rs
actix/src/db/: error.rs  mod.rs
actix/tests/: all.rs
client/: Cargo.toml
client/src/: lib.rs
frontend/: client.js  index.html  package-lock.json  package.json  purchase_grpc_web_pb.js  webpack.config.js
frontend/grpc/: PurchaseServiceClientPb.ts  purchase_pb.d.ts  purchase_pb.js
frontend/public/: index.html
frontend/src/: client.ts
migrations/: 20240125161305_initial.down.sql  20240125161305_initial.up.sql  20240129162821_duration_days.down.sql  20240129162821_duration_days.up.sql  20240130114339_seed_ticket_types.down.sql  20240131152927_order_delete_trigger.down.sql  20240131152927_order_delete_trigger.up.sql  20240213110649_add_users.down.sql  20240213110649_add_users.up.sql  20240216173738_add_timezone_to_datetime.down.sql  20240216173738_add_timezone_to_datetime.up.sql  20240216175455_add_timestamp_to_rfc3339_str_func.down.sql  20240216175455_add_timestamp_to_rfc3339_str_func.up.sql
proto/: purchase.proto
src/: db.rs  env.rs  error.rs  lib.rs  main.rs
src/db/: error.rs  mod.rs
tests/: all.rs
tests/test_client/: mod.rs
tonic/: .gitignore  Cargo.toml  envoy.yaml
tonic/frontend/: package.json  webpack.config.js
tonic/frontend/grpc/: purchase_pb.js
tonic/frontend/public/: index.html
tonic/proto/: purchase.proto
tonic/src/: env.rs  lib.rs  main.rs
tonic/src/db/: mod.rs
tonic/tests/: all.rs
