[package]
name = "festival-tickets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.10.2"
prost = "0.12"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.33"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
dotenv = "0.15.0"
strum = "0.25.0"
strum_macros = "0.25.3"
thiserror = "1.0.56"
futures = "0.3.30"

[dev-dependencies]
oneshot = "0.1.6"

[build-dependencies]
tonic-build = "0.10.2"
