[package]
name = "festival-tickets-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenv = "0.15.0"
env_logger = "0.11.1"
log = "0.4.20"
chrono = { version = "0.4.33", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Note: runtime-tokio is the correct choice for actix too
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono"] }
futures = "0.3.30"
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["serde"] }
strum = "0.25.0"
strum_macros = "0.25.3"
utoipa = { version = "4", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["actix-web"] }
utoipa-redoc = { version = "3", features = ["actix-web"] }
utoipa-rapidoc = { version = "3", features = ["actix-web"] }
